--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
 		"@radix-ui/react-alert-dialog": "^1.1.15",
 		"@radix-ui/react-checkbox": "^1.3.3",
 		"@radix-ui/react-dropdown-menu": "^2.1.16",
-		"@radix-ui/react-label": "^2.1.7",
+		"@radix-ui/react-label": "^2.1.8",
 		"@radix-ui/react-popover": "^1.1.15",
 		"@radix-ui/react-select": "^2.2.6",
-		"@radix-ui/react-separator": "^1.1.7",
+		"@radix-ui/react-separator": "^1.1.8",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@radix-ui/react-tooltip": "^1.2.8",
 		"@tanstack/react-table": "^8.21.3",
@@ -27,11 +27,11 @@
 		"js-cookie": "^3.0.5",
 		"jwt-decode": "^4.0.0",
 		"lucide-react": "^0.544.0",
-		"next": "15.5.4",
+		"next": "^16.1.1",
 		"next-themes": "^0.4.6",
-		"react": "19.1.0",
+		"react": "^19.2.3",
 		"react-day-picker": "^9.11.1",
-		"react-dom": "19.1.0",
+		"react-dom": "^19.2.3",
 		"react-hook-form": "^7.66.0",
 		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.3.1",
@@ -39,6 +39,7 @@
 		"zod-error": "^1.5.0"
 	},
 	"devDependencies": {
+		"@biomejs/biome": "2.3.10",
 		"@tailwindcss/postcss": "^4",
 		"@types/js-cookie": "^3.0.6",
 		"@types/node": "^20",
