--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"js-cookie": "^3.0.5",
 		"jwt-decode": "^4.0.0",
 		"lucide-react": "^0.544.0",
+		"motion": "^12.29.0",
 		"next": "^16.1.4",
 		"next-themes": "^0.4.6",
 		"react": "^19.2.3",
@@ -39,7 +40,7 @@
 		"zod-error": "^1.5.0"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "2.3.10",
+		"@biomejs/biome": "^2.3.12",
 		"@tailwindcss/postcss": "^4",
 		"@types/js-cookie": "^3.0.6",
 		"@types/node": "^20",
