--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
 		"@radix-ui/react-dropdown-menu": "^2.1.16",
 		"@radix-ui/react-label": "^2.1.8",
 		"@radix-ui/react-popover": "^1.1.15",
+		"@radix-ui/react-progress": "^1.1.8",
 		"@radix-ui/react-select": "^2.2.6",
 		"@radix-ui/react-separator": "^1.1.8",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@radix-ui/react-tooltip": "^1.2.8",
+		"@tanstack/react-query": "^5.90.20",
+		"@tanstack/react-query-devtools": "^5.91.3",
 		"@tanstack/react-table": "^8.21.3",
-		"axios": "^1.12.2",
 		"bcryptjs": "^3.0.2",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
@@ -40,7 +42,7 @@
 		"zod-error": "^1.5.0"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^2.3.12",
+		"@biomejs/biome": "^2.3.13",
 		"@tailwindcss/postcss": "^4",
 		"@types/js-cookie": "^3.0.6",
 		"@types/node": "^20",
