--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@hookform/resolvers": "^5.2.2",
 		"@radix-ui/react-alert-dialog": "^1.1.15",
 		"@radix-ui/react-checkbox": "^1.3.3",
+		"@radix-ui/react-collapsible": "^1.1.12",
 		"@radix-ui/react-dropdown-menu": "^2.1.16",
 		"@radix-ui/react-label": "^2.1.8",
 		"@radix-ui/react-popover": "^1.1.15",
@@ -25,6 +26,7 @@
 		"bcryptjs": "^3.0.2",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"cmdk": "^1.1.1",
 		"date-fns": "^4.1.0",
 		"js-cookie": "^3.0.5",
 		"jwt-decode": "^4.0.0",
@@ -32,6 +34,7 @@
 		"motion": "^12.29.0",
 		"next": "^16.1.4",
 		"next-themes": "^0.4.6",
+		"papaparse": "^5.5.3",
 		"react": "^19.2.3",
 		"react-day-picker": "^9.11.1",
 		"react-dom": "^19.2.3",
@@ -46,6 +49,7 @@
 		"@tailwindcss/postcss": "^4",
 		"@types/js-cookie": "^3.0.6",
 		"@types/node": "^20",
+		"@types/papaparse": "^5.5.2",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"libphonenumber-js": "^1.12.23",
