--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"react-day-picker": "^9.11.1",
 		"react-dom": "^19.2.3",
 		"react-hook-form": "^7.66.0",
+		"recharts": "^3.7.0",
 		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.3.1",
 		"zod": "^4.1.12",
