--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed",
-    "test:e2e:debug": "playwright test --debug"
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:a11y": "playwright test e2e/accessibility.spec.ts",
+    "audit:lighthouse": "npx lighthouse http://localhost:3000/en --output=html --output-path=./lighthouse-report.html --chrome-flags='--headless' --preset=desktop --only-categories=accessibility,performance,best-practices"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -52,6 +54,7 @@
     "zod-error": "^1.5.0"
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.11.1",
     "@biomejs/biome": "^2.3.13",
     "@playwright/test": "^1.58.2",
     "@tailwindcss/postcss": "^4",
