feat: add secret value config for client

--- a/k8s/frontend/deployment.yaml
+++ b/k8s/frontend/deployment.yaml
@@ -25,6 +25,8 @@ spec:
           envFrom:
             - configMapRef:
                 name: frontend-config
+            - secretRef:
+                name: frontend-secret
           resources:
             requests:
               cpu: 250m
