--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,10 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+!.env.example
+
+# k8s secrets (NEVER commit)
+k8s/frontend/secret.yaml
 
 # vercel
 .vercel
