--- a/package.json
+++ b/package.json
@@ -37,14 +37,16 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "jotai": "^2.18.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
-    "lucide-react": "^0.544.0",
+    "lucide-react": "^0.575.0",
     "motion": "^12.29.0",
     "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "papaparse": "^5.5.3",
     "pdf-lib": "^1.17.1",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.4",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.2.4",
