--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:e2e:headed": "playwright test --headed",
     "test:e2e:debug": "playwright test --debug",
     "test:e2e:a11y": "playwright test e2e/accessibility.spec.ts",
-    "audit:lighthouse": "npx lighthouse http://localhost:3000/en --output=html --output-path=./lighthouse-report.html --chrome-flags='--headless' --preset=desktop --only-categories=accessibility,performance,best-practices"
+    "audit:lighthouse": "npx lighthouse http://localhost:3000/en --output=html --output-path=./lighthouse-report.html --chrome-flags='--headless' --preset=desktop --only-categories=accessibility,performance,best-practices --view"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
